--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-server": "^17.1.0",
     "@angular/router": "^17.1.0",
     "@angular/ssr": "^17.1.0",
+    "angular": "^1.6.10",
     "bootstrap": "^5.3.2",
     "express": "^4.18.2",
     "firebase": "^10.7.2",
