--- a/package.json
+++ b/package.json
@@ -24,10 +24,15 @@
     "@angular/ssr": "^17.1.0",
     "angular": "^1.6.10",
     "bootstrap": "^5.3.2",
+    "docxtemplater": "^3.44.0",
     "express": "^4.18.2",
+    "file-saver": "^2.0.5",
     "firebase": "^10.7.2",
+    "jszip": "^3.10.1",
+    "pizzip": "^3.1.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
@@ -35,6 +40,7 @@
     "@angular/cli": "^17.1.0",
     "@angular/compiler-cli": "^17.1.0",
     "@types/express": "^4.17.17",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
     "angular-cli-ghpages": "^0.6.2",
