--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@angular/animations": "^17.1.0",
     "@angular/cdk": "^17.1.0",
-    "@angular/common": "^17.1.0",
+    "@angular/common": "^17.3.12",
     "@angular/compiler": "^17.1.0",
     "@angular/core": "^17.1.0",
     "@angular/fire": "^17.1.0",
@@ -27,6 +27,7 @@
     "angular": "^1.6.10",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.9",
+    "dialogflow": "^1.2.0",
     "docxtemplater": "^3.44.0",
     "express": "^4.18.2",
     "file-saver": "^2.0.5",
